# ti84ce

./: .gitignore  CLAUDE.md  Makefile  README.md
android/: build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  backend_wrapper.cpp  jni.cpp  jni_loader.cpp
android/app/src/main/cpp/cemu/: cemu_adapter.c  emu.h
assets/: button_manifest.json
core/: Cargo.toml
core/.cargo/: config.toml
core/examples/: boot_test.rs  compare_trace.rs  debug.rs  trace_boot.rs
core/include/: emu.h
core/src/: bus.rs  calc_integration_test.rs  cpu.rs  disasm.rs  emu.rs  keypad_integration_test.rs  lib.rs  memory.rs  scheduler.rs  ti_file.rs  wasm.rs
core/src/cpu/: execute.rs  flags.rs  helpers.rs  mod.rs
core/src/cpu/tests/: instructions.rs  mod.rs  modes.rs  parity.rs
core/src/peripherals/: backlight.rs  control.rs  flash.rs  interrupt.rs  keypad.rs  lcd.rs  mod.rs  rtc.rs  sha256.rs  spi.rs  timer.rs  watchdog.rs
docs/: ROM_BOOT_ANALYSIS.md  SPI_PARITY_ISSUE.md  architecture.md  cemu_core_comparison.md  findings.md  milestones.md  parity_findings.md  pr_comparison_report.md  trace-comparison.md
ios/Calc/: CalcApp.swift  ContentView.swift
ios/Calc.xcodeproj/: project.pbxproj
ios/Calc.xcodeproj/project.xcworkspace/xcuserdata/hunterchen.xcuserdatad/: UserInterfaceState.xcuserstate
ios/Calc.xcodeproj/xcshareddata/xcschemes/: Calc-Both.xcscheme  Calc-CEmu.xcscheme  Calc-Rust.xcscheme
ios/Calc/Bridge/: Calc-Bridging-Header.h  EmulatorBridge.swift  backend_bridge.c
ios/Calc/Models/: EmulatorPreferences.swift  RomStorage.swift
ios/Calc/Persistence/: StateManager.swift
ios/Calc/Resources/Assets.xcassets/btn_0.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_1.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_2.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_2nd.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_3.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_4.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_5.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_6.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_7.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_8.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_9.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_add.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_alpha.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_apps.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_clear.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_comma.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_cos.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_del.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_div.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_dot.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_dpad.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_enter.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_graph.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_ln.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_log.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_lparen.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_math.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_mode.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_mul.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_neg.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_on.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_pow.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_prgm.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_rparen.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_sin.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_stat.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_sto.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_sub.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_tan.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_trace.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_vars.imageset/: Contents.json
ios/Calc/Resources/Assets.xcassets/btn_window.imageset/: Contents.json
ios/Calc/Views/: DPadView.swift  EmulatorView.swift  ImageKeypadView.swift  RomLoadingView.swift
ios/Config/: Backend-Both.xcconfig  Backend-CEmu.xcconfig  Backend-Rust.xcconfig
ios/cemu/: CMakeLists.txt
ios/include/: emu_backend.h
scripts/: build-android-cemu.sh  build-android-fast.sh  build-android.sh  build.sh  button_regions.json  compare_sparse_traces.py  extract_buttons.py  extract_divergence.py  find_first_divergence.py  gen_sparse_traces.sh
tools/cemu-test/: .gitignore  Makefile  README.md  cemu_wrapper.c  cemu_wrapper.h  parity_check.c  test_cemu.c  test_wrapper.c  trace_gen.c
web/: .gitignore  README.md  build.sh  cemu-emscripten.mk  cemu-stubs.c  index.html  package-lock.json  package.json  test-cemu.mjs  test-wasm.mjs  vite.config.ts
web/public/: rom-manifest.json
web/scripts/: gen-rom-manifest.mjs
web/src/: App.css  App.tsx  Calculator.tsx  index.css
web/src/assets/: rom.ts
web/src/cemu-core/: WebCEmu.d.ts  WebCEmu.js  WebCEmu.wasm
web/src/components/keypad/: DPad.tsx  ImageButton.tsx  KeyButton.tsx  Keypad.tsx  buttonRegions.ts  index.ts  types.ts  utils.ts
web/src/emu-core/: emu_core.d.ts  emu_core.js  emu_core_bg.wasm  emu_core_bg.wasm.d.ts  package.json
web/src/emulator/: CEmuBackend.ts  RustBackend.ts  index.ts  types.ts
web/src/pwa/: UpdateBanner.tsx  pwa-types.d.ts  useServiceWorker.ts
web/src/storage/: StateStorage.ts
(+19 files in other folders)
