[package]
name = "emu-core"
version = "0.1.0"
edition = "2021"
description = "TI-84 Plus CE emulator core"
license = "MIT"

[lib]
name = "emu_core"
crate-type = ["staticlib", "rlib"]

[dependencies]

[dev-dependencies]
chrono = "0.4"

[features]
default = []
# Export functions with rust_ prefix for iOS dual-backend builds
ios_prefixed = []

[profile.release]
lto = true
opt-level = 3
