[package]
name = "emu-core"
version = "0.1.0"
edition = "2021"
description = "TI-84 Plus CE emulator core"
license = "MIT"

[lib]
name = "emu_core"
crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }

[dev-dependencies]
chrono = "0.4"

[features]
default = []
# Export functions with rust_ prefix for iOS dual-backend builds
ios_prefixed = []
# WASM target support
wasm = ["wasm-bindgen", "js-sys", "web-sys"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[profile.release]
lto = true
opt-level = 3
